; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_mbuf.c_m_length2.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_mbuf.c_m_length2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32, %struct.mbuf* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @m_length2(%struct.mbuf* %0, %struct.mbuf** %1) #0 {
  %3 = alloca %struct.mbuf*, align 8
  %4 = alloca %struct.mbuf**, align 8
  %5 = alloca %struct.mbuf*, align 8
  %6 = alloca i32, align 4
  store %struct.mbuf* %0, %struct.mbuf** %3, align 8
  store %struct.mbuf** %1, %struct.mbuf*** %4, align 8
  store i32 0, i32* %6, align 4
  %7 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  store %struct.mbuf* %7, %struct.mbuf** %5, align 8
  br label %8

8:                                                ; preds = %23, %2
  %9 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %10 = icmp ne %struct.mbuf* %9, null
  br i1 %10, label %11, label %27

11:                                               ; preds = %8
  %12 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %13 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = load i32, i32* %6, align 4
  %16 = add i32 %15, %14
  store i32 %16, i32* %6, align 4
  %17 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %18 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %17, i32 0, i32 1
  %19 = load %struct.mbuf*, %struct.mbuf** %18, align 8
  %20 = icmp eq %struct.mbuf* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %11
  br label %27

22:                                               ; preds = %11
  br label %23

23:                                               ; preds = %22
  %24 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %25 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %24, i32 0, i32 1
  %26 = load %struct.mbuf*, %struct.mbuf** %25, align 8
  store %struct.mbuf* %26, %struct.mbuf** %5, align 8
  br label %8

27:                                               ; preds = %21, %8
  %28 = load %struct.mbuf**, %struct.mbuf*** %4, align 8
  %29 = icmp ne %struct.mbuf** %28, null
  br i1 %29, label %30, label %33

30:                                               ; preds = %27
  %31 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %32 = load %struct.mbuf**, %struct.mbuf*** %4, align 8
  store %struct.mbuf* %31, %struct.mbuf** %32, align 8
  br label %33

33:                                               ; preds = %30, %27
  %34 = load i32, i32* %6, align 4
  ret i32 %34
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
